# nla3d

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.txt
cmake/modules/: FindEASYLOGGINGPP.cmake  FindEIGEN.cmake  FindEasyloggingpp.cmake  FindEigen.cmake  FindMKL.cmake
python/: nla3d.swg
snippets/: cmake_commands.txt  deformation_statistics.py  generate_timetable.py  git.txt  paraview_programmable_filter.py  paraview_snippets.py
src/: Dof.cpp  Dof.h  Element.cpp  Element.h  Element_Lagrange_Formulation.cpp  Element_Lagrange_Formulation.h  FEComponent.cpp  FEComponent.h  FEReaders.cpp  FEReaders.h  FEStorage.cpp  FEStorage.h  FE_Storage.cpp  FE_Storage.h  Material.cpp  Material.h  Mpc.cpp  Mpc.h  Node.cpp  Node.h  PostProcessor.cpp  PostProcessor.h  ReactionProcessor.cpp  ReactionProcessor.h  Reaction_proc.cpp  Reaction_proc.h  Solution.cpp  Solution.h  VtkProcessor.cpp  VtkProcessor.h  basic_elements.cpp  basic_elements.h  element_MIXED_4N_2D_P0.cpp  element_MIXED_4N_2D_P0.h  element_MIXED_8N_3D_P0.cpp  element_MIXED_8N_3D_P0.h  main.cpp  main2d.cpp  main_truss.cpp  post_proc.cpp  (+8 more)
src/elements/: ElementFactory.cpp  ElementFactory.h  PLANE41.cpp  PLANE41.h  SOLID80.cpp  SOLID80.h  SOLID81.cpp  SOLID81.h  element.cpp  element.h  element_factory.cpp  element_factory.h  element_lagrange.cpp  element_lagrange.h  query.h
src/lib/: CMakeLists.txt  Dof.cpp  Dof.h  FEComponent.cpp  FEComponent.h  FEReaders.cpp  FEReaders.h  FESolver.cpp  FESolver.h  FEStorage.cpp  FEStorage.h  Mpc.cpp  Mpc.h  Node.cpp  Node.h  PostProcessor.cpp  PostProcessor.h  ReactionProcessor.cpp  ReactionProcessor.h  VtkProcessor.cpp  VtkProcessor.h  solidmech.cpp  solidmech.h  sys.cpp  sys.h
src/lib/elements/: ElementFactory.cpp  ElementFactory.h  INTER0.cpp  INTER0.h  INTER3.cpp  INTER3.h  PLANE41.cpp  PLANE41.h  QUADTH.cpp  QUADTH.h  SOLID81.cpp  SOLID81.h  TETRA.cpp  TETRA.h  TETRA0.cpp  TETRA0.h  TETRA1.cpp  TETRA1.h  TRIANGLE4.cpp  TRIANGLE4.h  TRUSS3.cpp  TRUSS3.h  element.cpp  element.h  element_lagrange.h  isoparametric.cpp  isoparametric.h  query.h
src/lib/materials/: MaterialFactory.cpp  MaterialFactory.h  material.cpp  material.h  materials_hyperelastic.cpp  materials_hyperelastic.h
src/lib/math/: BlockSparseMatrix.h  CMakeLists.txt  EigenEquationSolvers.h  EquationSolver.cpp  EquationSolver.h  Mat.cpp  Mat.h  SparseMatrix.cpp  SparseMatrix.h  Vec.cpp  Vec.h
src/materials/: MaterialFactory.cpp  material.cpp  material.h  material_factory.cpp  material_factory.h  materials_hyperelastic.cpp  materials_hyperelastic.h
src/math/: CMakeLists.txt  Mat.cpp  Mat.h  Mat_Band.cpp  Mat_Band.h  SparseMatrix.cpp  SparseMatrix.h  Sparse_Matrix.cpp  Sparse_Matrix.h  Vec.cpp  Vec.h
test/: CMakeLists.txt  QUADTH_test.cpp  QUADTH_test.py  QUADTH_transient.cpp  TETRA0_test.cpp  TETRA0_test.py  TETRA1_test.cpp  TimeControlTest.cpp  eigen_mat_prod_test.cpp  fereaders.cpp  isoparametric_test.cpp  mat_math.cpp  mat_math.py  mat_prod_test.cpp  mat_sparse_pardiso.cpp  mkl_band.cpp  sparse_math.cpp  truss.py
test/3d_damper/: 3d_damper_test.cpp  model.cdb  notes.txt
test/3d_damper/ansys/: loading_curve_ansys.txt  snippet_apply_BC.txt  snippet_unselect_wedges.txt
test/QUADTH/: FEM for Heat Transfer Problems (Finite Element Method) Part 4.htm  FEM for Heat Transfer Problems (Finite Element Method) Part 5.htm  README.txt  for_nla3d.cdb  heat.apdl  heat.cdb  heat.inp  temp.txt  temphistory.txt
test/TETRA0/: apdl.txt  disp.res  stress.res  tetra.cdb
test/TETRA1/: term.res  tetra1.cdb
test/a2000_damper/: a2000.cdb  a2000_damper_test.cpp
test/a2000_damper/ansys/: apdl_script.txt  loading_curve_ansys.txt
test/mat_prod/: eigen_mat_prod_test.cpp  mat_prod_test.cpp
test/mat_prod/matlab/: matABprod_240912  matATBprod_240912  matBTDBprod_2409  matBTVprod_2409  matBVprod_2409  test_generator.m
test/rigid_body_mpc/: block_ROTX.cdb  block_ROTY.cdb  block_ROTZ.cdb  reference_MOMZ_reaction.txt
trash/: SOLID81.cpp  SOLID81.h  Solution.cpp  Solution.h  lambda_proc.cpp  lambda_proc.h
trash/unused_sources/: Cmd_Shell.cpp  Cmd_Shell.h  ColorE_Scene.cpp  ColorE_Scene.h  ColorN_Scene.cpp  ColorN_Scene.h  Colormap.cpp  Colormap.h  Def_Form_proc.cpp  Def_Form_proc.h  Def_Scene.cpp  Def_Scene.h  EGraph_proc.cpp  EGraph_proc.h  FE_Scene.cpp  FE_Scene.h  FE_Storage(bck_up).cpp  FE_Storage(bck_up).h  Force_proc.cpp  Force_proc.h  Render.h  Scene.cpp  Scene.h  Stress_proc.cpp  Stress_proc.h  elist_proc.cpp  elist_proc.h  render.cpp  strain_proc.cpp  strain_proc.h
